--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>P4C OTA INSTALL</H1>
 <br>
-<a href="./gbePathfinerMobile-12-07-2021.ipa" download>
+<a href="./gbePathfinerMobile-12-07-2021.ipa">
   Install
 </a>
