update index.html manifest url

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <h1>P4C OTA INSTALL</h1>
 <br />
-<a href="itms-services://?action=download-manifest&url=manifest.plist">
+<a
+  href="itms-services://?action=download-manifest&url=https://colbyschulz.github.io/p4c-ota-install/manifest.plist"
+>
   Install
 </a>
