--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<h1>P4C OTA INSTALL</h1>
+<h1>GBE Pathfinder Corrosion App</h1>
 <br />
 <a
-  href="itms-services://?action=download-manifest&url=https://colbyschulz.github.io/p4c-ota-install/gbePathfinderMobile.plist"
+  href="itms-services://?action=download-manifest&url=https://colbyschulz.github.io/p4c-ota-install/manifest.plist"
 >
-  Install
+  Install Application
 </a>
