--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 <a
   href="itms-services://?action=download-manifest&url=https://colbyschulz.github.io/p4c-ota-install/manifest.plist"
 >
-  Install Application
+  Install Pathfinder v1.7
 </a>
